2005-03-06  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.7.99 ==

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==

2004-12-06  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.97 ==

2004-11-15  Andy Wingo  <wingo@pobox.com>

	* package.ac: Add record_check.

2004-10-28  Andy Wingo  <wingo@pobox.com>

	* gtk-checks.ac: 
	* glib-checks.ac: 
	* defs-checks.ac: Versioned pkg-config check.

	* examples/test.scm: Use "exec guile-gnome-0 ..."

2004-10-26  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am (guilegnomelib_LTLIBRARIES): Install to
	versioned directory.

2004-09-27  Andy Wingo  <wingo@pobox.com>

	* gnome/glade.scm: Avoid deprecated modules.

	* examples/test.scm: Add license block.

2004-09-19  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am (libgw_guile_gnome_libglade_la_LIBADD): Not
	G_WRAP_LINK_ARGS, it's G_WRAP_LIBS.

2004-09-16  Andy Wingo  <wingo@pobox.com>

	* Makefile.am (SUBDIRS): Dist fixes.

	* README: Added.

	* NEWS: Added.

	* AUTHORS: Added.

	* gtk-checks.ac: Check the right package.

	* glib-checks.ac: Check the right package.

2004-09-12  Andy Wingo  <wingo@pobox.com>

	* defs-checks.ac: New file.

	* gnome/gw/Makefile.am (libgw_guile_gnome_libglade_la_SOURCES):
	Don't dist the g-wrap generated C file.

	* Makefile.am (EXTRA_DIST): Add the .ac files to the dist.

	* gnome/overrides/Makefile.am, gnome/overrides/libglade.defs: Add
	overrides to the libglade module.

	* gnome/Makefile.am: Fix for overrides, dist stuff.

	* gnome/gw/libglade-spec.scm (initialize): Use
	load-defs-with-overrides, new module locations.

2004-08-06  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/Makefile.am: Distribute and install glade.scm.

	* examples/test.scm: Use (gnome glade) instead of 
	(gnome gw libglade).

2004-07-01  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/libglade-spec.scm (initializations-cg): Fix module
	stuff.

	* gnome/glade.scm (gnome): Fix name.
