@@ -1,3 +1,8 @@
+2005-04-10  Andreas Rottmann  <a.rottmann@gmx.at>
+
+	* gnome/gw/glade-support.c: Use new SCM<->gpointer conversion
+	macros.
+
 2005-03-06  Andy Wingo  <wingo@pobox.com>
 
 	* == Released guile-gnome-platform version 2.7.99 ==
